--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "mdbreact": "^4.22.1",
     "popper.js": "^1.16.0",
     "rc-banner-anim": "^2.4.2",
     "rc-checkbox": "^2.1.8",
+    "rc-pagination": "^1.20.11",
     "react": "^16.12.0",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^5.4.1"
   },
   "scripts": {
